k8s/manifests/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: LoadBalancer
  selector:
    app: prowlarr
  ports:
    - port: 9696
      targetPort: 9696
